syntax = "proto3";
package schema.v2;

import "google/protobuf/struct.proto";
import "v2/project_source.proto";
import "v2/browser.proto";

message ProjectPageImport {
  int32 project_generate_queue_id = 1;
  int32 project_id = 2;

  string url = 3;
  ProjectSource projectSource = 4;
  BrowserStorageState storageState = 5;
}

message ProjectPageImportResponse {
  int32 project_generate_queue_id = 1;
  int32 project_id = 2;

  Status status = 3;
  google.protobuf.Struct payload = 4;

  enum Status {
    SUCCEEDED = 0;
    INPROGRESS = 1;
    FAILED = 2;
  }
}
